force-app/main/default/objects/Credit_Enquiry__c/Credit_Enquiry__c.object-meta.xml
<CustomObject>
    <label>Credit Enquiry</label>
    <nameField>
        <displayFormat>CEN-{0000}</displayFormat>
        <label>Credit Enquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Enquiries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>