force-app/main/default/objects/Credit_Enquiry__c/fields/Credit_Enquirer__c.field-meta.xml
<CustomField>
    <fullName>Credit_Enquirer__c</fullName>
    <label>Credit Enquirer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>