force-app/main/default/objects/Credit_Enquiry__c/fields/Credit_Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Enquiry_Type__c</fullName>
    <label>Credit Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>