force-app/main/default/objects/Credit_Enquiry__c/fields/Difference_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Difference_In_Months__c</fullName>
    <formula>(Party__r.Report_Created_Date__c - Enquiry_Date__c) / 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference In Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>