force-app/main/default/objects/Credit_Enquiry__c/fields/Enquiry_amount__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_amount__c</fullName>
    <label>Enquiry amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>