force-app/main/default/objects/Credit_Enquiry__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <label>Party</label>
    <referenceTo>clcommon__Party__c</referenceTo>
    <relationshipLabel>Credit Enquiries</relationshipLabel>
    <relationshipName>Credit_Enquiries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>