force-app/main/default/objects/Credit_Enquiry__c/fields/Role_in_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Role_in_Enquiry__c</fullName>
    <label>Role in Enquiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>